prevent overlap of views row in user bio list

--- a/sites/all/themes/nm_bootstrap/css/style.css
+++ b/sites/all/themes/nm_bootstrap/css/style.css
@@ -7171,3 +7171,7 @@ div.author-joined {
   float: left;
   padding-right: 5px;
 }
+
+#block-views-reporters-block .views-row {
+  clear: both;
+}
